Update render.yaml to skip DB creation

--- a/render.yaml
+++ b/render.yaml
@@ -9,24 +9,12 @@ services:
     startCommand: ""
     envVars:
       - key: SPRING_DATASOURCE_URL
-        fromDatabase:
-          name: rashmi-db
-          property: connectionString
+        sync: false
       - key: SPRING_DATASOURCE_USERNAME
-        fromDatabase:
-          name: rashmi-db
-          property: user
+        sync: false
       - key: SPRING_DATASOURCE_PASSWORD
-        fromDatabase:
-          name: rashmi-db
-          property: password
+        sync: false
       - key: RASHMI_APP_JWTSECRET
         generateValue: true
       - key: RASHMI_APP_JWTEXPIRATIONMS
         value: 86400000
-
-databases:
-  - name: rashmi-db
-    databaseName: rashmi_ecommerce
-    user: rashmi_user
-    plan: free
