Force push fix from scratch

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     env: docker
     region: ohio
     plan: free
-    dockerContext: ./backend
+    dockerContext: .
+    dockerfilePath: ./backend/Dockerfile
     buildCommand: ""
     startCommand: ""
     envVars:
