Move Dockerfile to root to fix deployment path

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: ohio
     plan: free
     dockerContext: .
-    dockerfilePath: ./backend/Dockerfile
+    dockerfilePath: ./Dockerfile
     buildCommand: ""
     startCommand: ""
     envVars:
